--- a/prometheus-metrics-exposition-formats-no-protobuf/pom.xml
+++ b/prometheus-metrics-exposition-formats-no-protobuf/pom.xml
@@ -18,7 +18,7 @@
 		<connection>scm:git:https://github.com/xdev-software/prometheus-metrics-exposition-formats-no-protobuf.git</connection>
 	</scm>
 
-	<inceptionYear>2023</inceptionYear>
+	<inceptionYear>2024</inceptionYear>
 
 	<organization>
 		<name>XDEV Software</name>
@@ -48,6 +48,26 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
+
+	<dependencies>
+		<dependency>
+			<groupId>io.prometheus</groupId>
+			<artifactId>prometheus-metrics-exposition-formats</artifactId>
+			<version>1.3.2</version>
+			<exclusions>
+				<!-- On <= 1.3.1 -->
+				<exclusion>
+					<groupId>io.prometheus</groupId>
+					<artifactId>prometheus-metrics-shaded-protobuf</artifactId>
+				</exclusion>
+				<!-- On >= 1.3.2-->
+				<exclusion>
+					<groupId>com.google.protobuf</groupId>
+					<artifactId>protobuf-java</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+	</dependencies>
 
 	<repositories>
 		<!-- The order of definitions matters. Explicitly defining central here 
