--- a/prometheus-metrics-exposition-formats-no-protobuf-demo/pom.xml
+++ b/prometheus-metrics-exposition-formats-no-protobuf-demo/pom.xml
@@ -50,7 +50,7 @@
 			<version>${project.version}</version>
 			<scope>runtime</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -64,6 +64,7 @@
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-registry-prometheus</artifactId>
 			<exclusions>
+				<!-- Exclude default module so that dependency is properly removed -->
 				<exclusion>
 					<groupId>io.prometheus</groupId>
 					<artifactId>prometheus-metrics-exposition-formats</artifactId>
