--- a/prometheus-metrics-exposition-formats-no-protobuf/pom.xml
+++ b/prometheus-metrics-exposition-formats-no-protobuf/pom.xml
@@ -60,7 +60,7 @@
 					<groupId>io.prometheus</groupId>
 					<artifactId>prometheus-metrics-shaded-protobuf</artifactId>
 				</exclusion>
-				<!-- On >= 1.3.2-->
+				<!-- Exclude if they ever not shade it -->
 				<exclusion>
 					<groupId>com.google.protobuf</groupId>
 					<artifactId>protobuf-java</artifactId>
